@@ -31,6 +31,8 @@
 #ifndef WorkerFileSystemCallbacksBridge_h
 #define WorkerFileSystemCallbacksBridge_h
 
+#if ENABLE(FILE_SYSTEM)
+
 #include "PlatformString.h"
 #include "ScriptExecutionContext.h"
 #include "WebFileError.h"
@@ -114,5 +116,7 @@ private:
 };
 
 } // namespace WebCore
+
+#endif
 
 #endif // WorkerFileSystemCallbacksBridge_h
